--- a/package.json
+++ b/package.json
@@ -53,9 +53,12 @@
     "typescript": "^4.5.5",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.7.4",
+    "@types/webpack-bundle-analyzer": "^4.4.1",
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
