--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "mini-css-extract-plugin": "^2.5.3",
+    "regenerator-runtime": "^0.14.0",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "storybook": "^7.6.3",
