--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     // Компилятор будет обрабатывать не только TS файлы, но и JS файлы
     "allowJs": true,
     "moduleResolution": "node",
+    "types": ["node"],
     // Для абсолютного импорта
     "baseUrl": ".",
     "paths": {
